Added get_data.null_values function

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ notebooks/deaths_trends_timezoom.ipynb
 __pycache__/get_data.cpython-310.pyc
 .ipynb_checkpoints/GroupCode-checkpoint.ipynb
 .ipynb_checkpoints/Ming-checkpoint.ipynb
+.ipynb_checkpoints/Nisha-checkpoint.ipynb
