Added get_visual and improve get_data function
get_visual - plot_clustercategory_bar(df)
get_data - show_cluster_max(df,value_column)

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ __pycache__/get_data.cpython-310.pyc
 .ipynb_checkpoints/GroupCode-checkpoint.ipynb
 .ipynb_checkpoints/Ming-checkpoint.ipynb
 .ipynb_checkpoints/Nisha-checkpoint.ipynb
+__pycache__/get_visual.cpython-310.pyc
