Added heatmap visual

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ __pycache__/get_data.cpython-310.pyc
 .ipynb_checkpoints/Ming-checkpoint.ipynb
 .ipynb_checkpoints/Nisha-checkpoint.ipynb
 __pycache__/get_visual.cpython-310.pyc
+.ipynb_checkpoints/Nisha1-checkpoint.ipynb
+.idea/rGraphicsSettings.xml
+.idea/rSettings.xml
