Finalize main.ipynb
Ready for presentation

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ __pycache__/get_visual.cpython-310.pyc
 .ipynb_checkpoints/Nisha1-checkpoint.ipynb
 .idea/rGraphicsSettings.xml
 .idea/rSettings.xml
+.ipynb_checkpoints/Untitled-checkpoint.ipynb
