--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ notebooks/deaths_trends_timezoom.ipynb
 .idea/misc.xml
 .idea/modules.xml
 .idea/vcs.xml
+.idea/.gitignore
 __pycache__/get_data.cpython-310.pyc
 .ipynb_checkpoints/GroupCode-checkpoint.ipynb
 .ipynb_checkpoints/Ming-checkpoint.ipynb
@@ -24,3 +25,5 @@ __pycache__/get_visual.cpython-310.pyc
 .idea/rGraphicsSettings.xml
 .idea/rSettings.xml
 .ipynb_checkpoints/Untitled-checkpoint.ipynb
+.ipynb_checkpoints/Narmathaa-checkpoint.ipynb
+.ipynb_checkpoints/Narmathaa2-checkpoint.ipynb
