clean up folder by updating .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ __pycache__/get_visual.cpython-310.pyc
 .ipynb_checkpoints/Untitled-checkpoint.ipynb
 .ipynb_checkpoints/Narmathaa-checkpoint.ipynb
 .ipynb_checkpoints/Narmathaa2-checkpoint.ipynb
+/.ipynb_checkpoints/
